# BIT_QG

./: .gitignore  CITATION.bib  CMakeLists.txt  README.md
graphs/: generate.py
include/: degree_preconditioner.h  diagonal_preconditioner.h  example.h  mf_quantum_graph.h  neumann_neumann_preconditioner.h  polynomial_preconditioner.h
src/: measure_nn.cpp  mf_quantum_graph.cpp  revision_cases.zsh
